# individual-identifiers

./: Cargo.toml  Readme.md
src/: identifier.rs  lib.rs  main.rs
