[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }
