[package]
name = "individual-identifiers"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/kirkl4nd/individual-identifiers"
documentation = "https://docs.rs/individual-identifiers"
authors = ["kirkl4nd"]
description = "A library for creating unique, human-readable alliterative identifiers."

[lib]
name = "individual_identifiers"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
crossbeam = "0.8.2"
num_cpus = "1.16.0"
rayon = "1.7.0"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }
